--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,13 @@
 [tool.poetry]
 name = "ds_caselaw_utils"
-version = "0.1.2"
+version = "0.1.3"
 description = "Utilities for the National Archives Caselaw project"
 authors = ["David McKee <dragon@dxw.com>"]
 license = "MIT"
+homepage = "https://github.com/nationalarchives/ds-caselaw-utils"
+keywords = ["national archives", "caselaw"]
+readme = "README.md"
+
 
 [tool.poetry.dependencies]
 python = "^3.9"
