--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,11 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.9
-      - run: python -m unittest discover -s src/ds_caselaw_utils/
+      - name: Run image
+        uses: abatilo/actions-poetry@v2.0.0
+        with:
+          poetry-version: 1.1.11
+      - name: Install libraries
+        run: poetry install
+      - name: Run tests
+        run: poetry run python -m unittest discover -s src/ds_caselaw_utils/
