Add a github action to lint the code on push

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,21 @@
-name: Run unit tests
+name: Run linter & unit tests
 
 on: push
 
 jobs:
+  linter:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v3.1.2
+        with:
+          python-version: "3.9"
+
+      - name: Run pre-commit
+        uses: pre-commit/action@v2.0.3
   test:
     name: Run unit tests
     runs-on: ubuntu-20.04
