Add method to look up court metadata by parameter name
Needed for change to the public search interface to ensure that the 'remove search filter' buttons include the full court names rather than an abbreviation.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Install libraries
         run: poetry install
       - name: Run tests
-        run: poetry run python -m unittest discover -s src/ds_caselaw_utils/
+        run: cd src && poetry run python -m unittest
