make new first tier tribunal courts visible in UI

--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -358,19 +358,21 @@
         name: First-tier Tribunal (Tax Chamber)
         link: https://www.gov.uk/courts-tribunals/first-tier-tribunal-tax
         ncn: \[(\d{4})\] (UKFTT) (\d+) \((TC)\)
+        param: 'ukftt-tc'
         start_year: 2022
         end_year: ~
-        selectable: false
-        listable: false
+        selectable: true
+        listable: true
     -
         code: UKFTT-GRC
         name: First-tier Tribunal (General Regulatory Chamber)
+        param: 'ukftt-grc'
         link: https://www.gov.uk/courts-tribunals/first-tier-tribunal-general-regulatory-chamber
         ncn: \[(\d{4})\] (UKFTT) (\d+) \((GRC)\)
         start_year: 2022
         end_year: ~
-        selectable: false
-        listable: false
+        selectable: true
+        listable: true
     -
         code: ET
         name: Employment Tribunal
