Fix parameter value for upper tribunals

--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -300,7 +300,7 @@
         ncn: \[(\d{4})\] (UKUT) (\d+) \((IAC)\)
         selectable: true
         listable: true
-        param: 'ukuut-iac'
+        param: 'ukut-iac'
         start_year: 2010
         end_year: ~
 
@@ -312,7 +312,7 @@
         ncn: \[(\d{4})\] (UKUT) (\d+) \((LC)\)
         selectable: true
         listable: true
-        param: 'ukuut-lc'
+        param: 'ukut-lc'
         start_year: 2015
         end_year: ~
     -
@@ -323,7 +323,7 @@
         ncn: \[(\d{4})\] (UKUT) (\d+) \((TCC)\)
         selectable: true
         listable: true
-        param: 'ukuut-tcc'
+        param: 'ukut-tcc'
         start_year: 2017
         end_year: ~
     -
@@ -334,7 +334,7 @@
         ncn: \[(\d{4})\] (UKUT) (\d+) \((AAC)\)
         selectable: true
         listable: true
-        param: 'ukuut-aac'
+        param: 'ukut-aac'
         start_year: 2022
         end_year: ~
 - name: employment_appeal_tribunal
