--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,17 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
 
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.23.0
+    hooks:
+      - id: check-jsonschema
+        files: ^src/ds_caselaw_utils/data/court_names.yaml$
+        args:
+          [
+            "--schemafile",
+            "src/ds_caselaw_utils/data/schema/courts.schema.json",
+          ]
+
   - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
