--- a/src/ds_caselaw_utils/data/neutral_citation_regex.yaml
+++ b/src/ds_caselaw_utils/data/neutral_citation_regex.yaml
@@ -12,6 +12,6 @@
   ],
   ['^\[(\d{4})\] (EWFC|EWCOP) (\d+)$', [2, 1, 3]],
   ['^\[(\d{4})\] (UKUT) (\d+) \((AAC|IAC|LC|TCC)\)$', [2, 4, 1, 3]],
-  ['^\[(\d{4})\] (EAT) (\d+)$', [2, 1, 3]],
+  ['^\[(\d{4})\] (EAT|UKIPTrib) (\d+)$', [2, 1, 3]],
   ['^\[(\d{4})\] (UKFTT) (\d+) \((TC|GRC)\)$', [2, 4, 1, 3]],
 ]
