--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -18,7 +18,7 @@
     - code: UKPC
       name: Privy Council
       link: https://www.jcpc.uk/
-      ncn: \[(\d{4})\] (UKPC) \d+
+      ncn: \[(\d{4})\] (UKPC) (\d+)
       param: "ukpc"
       start_year: 2014
       end_year: 2022
