--- a/src/ds_caselaw_utils/data/neutral_citation_regex.yaml
+++ b/src/ds_caselaw_utils/data/neutral_citation_regex.yaml
@@ -15,4 +15,6 @@
   ['^\[(\d{4})\] (EAT) (\d+)$', [2, 1, 3]],
   ['^\[(\d{4})\] (UKFTT) (\d+) \((TC|GRC)\)$', [2, 4, 1, 3]],
   ['^\[(\d{4})\] (UKAIT) (\d+)$', [2, 1, 3]],
+  ['^\[(\d{4})\] (EWFC) (\d+)$', [2, 1, 3]],
+  ['^\[(\d{4})\] (EWFC) (\d+) \((B)\)$', [2, 4, 1, 3]],
 ]
