--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -352,7 +352,7 @@
       # This is an artifact of how the Family Court creates tiers of importance.
       link: https://www.judiciary.uk/you-and-the-judiciary/going-to-court/family-law-courts/
       ncn: \[(\d{4})\] (EWFC) (B) (\d+)
-      param: "ewfc"
+      param: "ewfc/b"
       start_year: 2009
       end_year: 2022
       selectable: false
