--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -341,22 +341,12 @@
     - code: EWFC
       name: Family Court
       link: https://www.judiciary.uk/you-and-the-judiciary/going-to-court/family-law-courts/
-      ncn: \[(\d{4})\] (EWFC) (\d+)
+      ncn: '\[(\d{4})\] (EWFC) (?:\(B\) )(\d+)'
       param: "ewfc"
       start_year: 2009
       end_year: 2022
       selectable: true
       listable: true
-    - code: "EWFC-B"
-      name: Family Court (B)
-      # This is an artifact of how the Family Court creates tiers of importance.
-      link: https://www.judiciary.uk/you-and-the-judiciary/going-to-court/family-law-courts/
-      ncn: \[(\d{4})\] (EWFC) (B) (\d+)
-      param: "ewfc/b"
-      start_year: 2009
-      end_year: 2022
-      selectable: false
-      listable: false
 
 - name: employment_appeal_tribunal
   display_name: ~
