fix: Change display name for Lower Courts to Other Courts
Signed-off-by: Adam Murray <adam-murray@hotmail.co.uk>

--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -319,7 +319,7 @@
       selectable: false
       listable: false
 - name: lower_courts
-  display_name: "Lower Courts"
+  display_name: "Other Courts"
   is_tribunal: false
   courts:
     - code: EWCOP
