--- a/src/ds_caselaw_utils/data/neutral_citation_regex.yaml
+++ b/src/ds_caselaw_utils/data/neutral_citation_regex.yaml
@@ -4,7 +4,7 @@
 # so the URL becomes eat/2022/1
 
 [
-  ['^\[(\d{4})\] (UKSC|UKPC) (\d+)$', [2, 1, 3]],
+  ['^\[(\d{4})\] (UKSC|UKPC|UKIPTrib) (\d+)$', [2, 1, 3]],
   ['^\[(\d{4})\] (EWCA) (Civ|Crim) (\d+)$', [2, 3, 1, 4]],
   [
     '^\[(\d{4})\] (EWHC) (\d+) \((Admin|Admlty|Ch|Comm|Costs|Fam|IPEC|Pat|QB|KB|SCCO|TCC)\)$',
