--- a/src/ds_caselaw_utils/data/neutral_citation_regex.yaml
+++ b/src/ds_caselaw_utils/data/neutral_citation_regex.yaml
@@ -10,7 +10,7 @@
     '^\[(\d{4})\] (EWHC) (\d+) \((Admin|Admlty|Ch|Comm|Costs|Fam|IPEC|Pat|QB|KB|SCCO|TCC)\)$',
     [2, 4, 1, 3],
   ],
-  ['^\[(\d{4})\] (EWFC|EWCOP|EWCC|EWCRC) (\d+)$', [2, 1, 3]],
+  ['^\[(\d{4})\] (EWFC|EWCOP|EWCC|EWCR) (\d+)$', [2, 1, 3]],
   ['^\[(\d{4})\] (EWCOP) (\d+) \((T1|T2|T3)\)$', [2, 4, 1, 3]],
   ['^\[(\d{4})\] (UKUT) (\d+) \((AAC|IAC|LC|TCC)\)$', [2, 4, 1, 3]],
   ['^\[(\d{4})\] (EAT) (\d+)$', [2, 1, 3]],
