Make Crown Courts EWCR visible

--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -384,8 +384,8 @@
       param: "ewcr"
       start_year: 2024
       end_year: 2024
-      selectable: false
-      listable: false
+      selectable: true
+      listable: true
     - code: "EWCC"
       name: "County Court"
       link: https://www.judiciary.uk/courts-and-tribunals/county-court/
