--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,8 +30,19 @@ repos:
             "src/ds_caselaw_utils/data/schema/courts.schema.json",
           ]
 
+  - repo: local
+    hooks:
+      - id: check_courts_list
+        name: build_courts_list
+        entry: scripts/build_courts_list
+        language: python
+        additional_dependencies: [pyyaml]
+        always_run: true
+        pass_filenames: false
+
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
         types_or: [yaml, json, xml, markdown, scss, javascript]
+        exclude: courts\.md
