--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,13 @@ unfixable = ["ERA"]
 # PD, NPY, AIR: ignored, panda / numpy / airflow specific
 # FURB: not yet out of preview
 
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "v$version"
+version_scheme = "pep440"
+version_provider = "poetry"
+update_changelog_on_bump = true
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
