--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,7 @@
 repos:
-  - hooks:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.6.0
+    hooks:
       - id: check-added-large-files
       - id: check-case-conflict
       - id: check-json
@@ -11,46 +13,44 @@ repos:
       - id: mixed-line-ending
       - id: no-commit-to-branch
       - id: trailing-whitespace
-    repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
-  - hooks:
-      - id: ruff-format
-    repo: https://github.com/astral-sh/ruff-pre-commit
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.6.6
-  - hooks:
-      - args:
-          - --schemafile
-          - src/ds_caselaw_utils/data/schema/courts.schema.json
-        files: ^src/ds_caselaw_utils/data/court_names.yaml$
-        id: check-jsonschema
-    repo: https://github.com/python-jsonschema/check-jsonschema
+    hooks:
+      - id: ruff-format
+
+  - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.29.2
-  - hooks:
-      - additional_dependencies:
-          - pyyaml
-        always_run: true
-        entry: scripts/build_courts_list
-        id: check_courts_list
-        language: python
+    hooks:
+      - id: check-jsonschema
+        files: ^src/ds_caselaw_utils/data/court_names.yaml$
+        args:
+          [
+            "--schemafile",
+            "src/ds_caselaw_utils/data/schema/courts.schema.json",
+          ]
+
+  - repo: local
+    hooks:
+      - id: check_courts_list
         name: build_courts_list
+        entry: scripts/build_courts_list
+        language: python
+        additional_dependencies: [pyyaml]
+        always_run: true
         pass_filenames: false
-    repo: local
-  - hooks:
-      - exclude: courts\.md
-        id: prettier
-        types_or:
-          - yaml
-          - json
-          - xml
-          - markdown
-          - scss
-          - javascript
-    repo: https://github.com/pre-commit/mirrors-prettier
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
-  - hooks:
+    hooks:
+      - id: prettier
+        types_or: [yaml, json, xml, markdown, scss, javascript]
+        exclude: courts\.md
+
+  - repo: https://github.com/commitizen-tools/commitizen
+    rev: v3.29.0
+    hooks:
       - id: commitizen
       - id: commitizen-branch
         stages:
           - push
-    repo: https://github.com/commitizen-tools/commitizen
-    rev: v3.29.0
