--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 "ruamel.yaml" = "^0.18.0"
+typing-extensions = "^4.12.2"
 
 [tool.poetry.dev-dependencies]
 
