--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ python = "^3.9"
 "ruamel.yaml" = "^0.18.0"
 typing-extensions = "^4.12.2"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
 
 [tool.ruff]
 line-length = 120
