--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ tag_format = "v$version"
 version_scheme = "pep440"
 version_provider = "poetry"
 update_changelog_on_bump = true
+changelog_incremental = true
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
