feat(Court): add court descriptions as HTML
This allows the Utilities library to provide HTML descriptions of courts for use downstream.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,6 +41,7 @@ repos:
         additional_dependencies:
           - types-PyYAML
           - ruamel.yaml
+          - markdown-it-py
         args:
           - --strict
         files: ^(src/ds_caselaw_utils|scripts)
