--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,8 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@main
+        with:
+          persist-credentials: false
       - name: Set up Python 3.9
         uses: actions/setup-python@v5
         with:
