Make Employment Tribunal selectable and listable

--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -401,8 +401,8 @@
       param: "et"
       # ncn_pattern: no NCN
       start_year: 2022
-      selectable: false
-      listable: false
+      selectable: true
+      listable: true
 
 - name: upper_tribunals
   display_name: "Upper Tribunals"
