--- a/src/ds_caselaw_utils/data/neutral_citation_regex.yaml
+++ b/src/ds_caselaw_utils/data/neutral_citation_regex.yaml
@@ -14,7 +14,7 @@
   ['^\[(\d{4})\] (EWCOP) (\d+) \((T1|T2|T3)\)$', [2, 4, 1, 3]],
   ['^\[(\d{4})\] (UKUT) (\d+) \((AAC|IAC|LC|TCC)\)$', [2, 4, 1, 3]],
   ['^\[(\d{4})\] (EAT) (\d+)$', [2, 1, 3]],
-  ['^\[(\d{4})\] (UKFTT) (\d+) \((TC|GRC)\)$', [2, 4, 1, 3]],
+  ['^\[(\d{4})\] (UKFTT) (\d+) \((TC|GRC|PC)\)$', [2, 4, 1, 3]],
   ['^\[(\d{4})\] (UKAIT) (\d+)$', [2, 1, 3]],
   ['^\[(\d{4})\] (EWFC) (\d+)$', [2, 1, 3]],
   ['^\[(\d{4})\] (EWFC) (\d+) \((B)\)$', [2, 4, 1, 3]],
